--- a/rnd/results.tex
+++ b/rnd/results.tex
@@ -1,4 +1,4 @@
-\chapter{Results and Discussion}
+\chapter{Results and Discussions}
 
 
 \section{Including Tables}
@@ -10,7 +10,7 @@ a convention to write the caption above the table.  Note that in the
 case of figures the caption appears below the figure.
 
 \begin{table}[tbp]
-  \begin{center}
+  \centering
     \caption{Physical properties of the materials used.}
     \label{tab:samtab}
     \begin{tabular}{ll}
@@ -20,8 +20,7 @@ case of figures the caption appears below the figure.
       Particle Density, $\rho_{\mathrm{p}}$ & 2500 kg/m$^{3}$ \\
       Viscosity, $\eta_{\mathrm{s}}$& 1 $\times 10^{-3}$ Pa-s \\
       \bottomrule \\
-    \end{tabular}
-  \end{center}
+    \end{tabular}  
 \end{table}
 
 %%% Local Variables: 
