--- a/expt/experimental.tex
+++ b/expt/experimental.tex
@@ -12,14 +12,13 @@ pixelation. Make sure to write it to an ``Encapsulated Post-script''or
 
 
 \begin{figure}[tbp]
-  \begin{center}
+  \centering
     \includegraphics[width=0.7\textwidth]{profflow}
     \caption[Process flow sheet]{Process flow sheet of the
       experimental setup. The caption of the figure goes here. A
       shorter caption can be written in square brackets to identify it
       in the list of figures.}
-    \label{fig:pfs}
-  \end{center}
+    \label{fig:pfs} 
 \end{figure}
 
 Figures should be given a label and which can be used to refer to them
