--- a/lit/literature.tex
+++ b/lit/literature.tex
@@ -10,19 +10,12 @@ written. This is written in the Bib\TeX format. Most of the
 bibliographic web pages (Scopus, ISI Web) and software (EndNote, etc)
 allow you to export bibliographic entries in the Bib\TeX format.
 
-Citations are referred in the text using \verb|\citet| command which produces
-citations as though they are part of the text.  In order to say
+Citations are referred in the text using \verb|\citet| command which produces citations as though they are part of the text.  In order to say
 somebody did this work as a part of a line use:
-\verb|\citet{Batzri1973}|
-have done extensive work on \ldots.  This will produce
-
-\citet{Batzri1973} have done extensive work on \ldots
-
-
-Alternately citations can appear in parenthesis.  The
-command \verb|\citep{Batzri1973}| is used to automatically put the
-citations in parenthesis.
-  As an example consider the extensive work
+\verb|\citet{Batzri1973}| have done extensive work on \ldots.  This will produce
+\citet{Batzri1973} have done extensive work on \ldots. Alternately citations can appear in parenthesis.  
+The command~\verb|\citep{Batzri1973}| is used to automatically put the
+citations in parenthesis.  As an example consider the extensive work
 done in the area of book writing \citep{Sackmann1995a,Boal2012}.
 
 Conferences \citep{rich-mart92} or collection of work
