--- a/mainrep.tex
+++ b/mainrep.tex
@@ -93,12 +93,13 @@
 %*******************************************************************
 %                         Dedication Page                         
 %*******************************************************************
-
 \dedication[To my Parents]        
 %\addintoc{Dedication}
+
 %*******************************************************************
 %                        Certificate Page                         
 %*******************************************************************
+%\makecertificate[change title name]{report type} 
 \makecertificate{seminar report} 
 %\makecertificate{thesis}
 %\makecertificate{dissertation}
