Title page font is changed

--- a/mainrep.tex
+++ b/mainrep.tex
@@ -74,7 +74,7 @@
 
 
 %% Department/Centre Name
-%\dept{Department of Chemical Engineering}
+\dept{Department of Chemical Engineering}
 
 %% Supervisor and cosupervisor name can be put here
 \supervisor{Supervisor name}
@@ -93,12 +93,13 @@
 %*******************************************************************
 %                         Dedication Page                         
 %*******************************************************************
-
 \dedication[To my Parents]        
 %\addintoc{Dedication}
+
 %*******************************************************************
 %                        Certificate Page                         
 %*******************************************************************
+%\makecertificate[change title name]{report type} 
 \makecertificate{seminar report} 
 %\makecertificate{thesis}
 %\makecertificate{dissertation}
